give me the client side url /u/portal/auth?faculty_login
in mail side

--- a/src/email-templates/remark-notification.html
+++ b/src/email-templates/remark-notification.html
@@ -178,7 +178,7 @@
             <p>You can view this remark in detail and, if necessary, submit an appeal by logging into your faculty portal.</p>
             
             <div class="cta-button-container">
-                <a href="{{portalUrl}}" class="cta-button">Go to Portal</a>
+                <a href="{{portalUrl}}?faculty_login&email={{facultyEmail}}" class="cta-button">Go to Portal</a>
             </div>
 
             <p>If you have any questions, please start a conversation regarding this remark from the portal.</p>
